fix: fix mobile nav bar logo too close to the hangbugger menu

--- a/src/common/Navbar/Navbar.module.css
+++ b/src/common/Navbar/Navbar.module.css
@@ -79,3 +79,9 @@
   margin: auto auto;
  }
 }
+
+@media screen and (max-width: 426px) {
+ .navbar  {
+  padding: 20px 10px 10px 10px;
+}
+}
